<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/title"
        android:layout_width="416dp"
        android:layout_height="139dp"
        android:background="@drawable/survivortree"
        android:gravity="center_horizontal|center_vertical"
        android:text="Connect. Share. Heal."
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bringing_together"
        android:layout_width="345dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bringing"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/our_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Our Mission"
        android:layout_marginTop="@dimen/standard_elevation_card"
        android:textAppearance="@style/our_mission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>
    <TextView
        android:id="@+id/mission_text"
        android:layout_marginTop="@dimen/standard_elevation_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/mission"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/our_mission"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/our_resources"
        android:layout_marginTop="@dimen/standard_elevation_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_resources"
        android:textAppearance="@style/our_mission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mission_text"/>
    <Button
        android:id="@+id/global_organizations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryDarkColor"
        android:layout_marginTop="@dimen/standard_elevation_card"
        android:text="Global Organizations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/our_resources"/>
    <Button
        android:id="@+id/victims_resources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Victim's Resources"
        android:backgroundTint="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/global_organizations"/>
    <TextView
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_elevation_card"

        android:text="About Us"
        android:textAppearance="@style/our_mission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/victims_resources"/>
    <Button
        android:id="@+id/meet_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_elevation_card"
        android:backgroundTint="@color/primaryDarkColor"
        android:text="Meat Our Team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us"/>
    <Button
        android:id="@+id/what_we_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryDarkColor"
        android:text="What We Do"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meet_team"/>
    <Button
        android:id="@+id/sponsors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sponsors"
        android:backgroundTint="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/what_we_do"/>

    <ImageView
        android:layout_marginTop="@dimen/standard_elevation_card"
        android:id="@+id/logo"
        android:layout_width="356dp"
        android:layout_height="121dp"
        android:src="@drawable/aasts_logo"
        app:layout_constraintTop_toBottomOf="@id/sponsors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>